--- a/index.html
+++ b/index.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SuperHero Chile</title>
-    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./assets/css/styles.css"> <!-- Agrega la referencia al archivo CSS externo -->
-</head>
+    <link
+      rel="shortcut icon"
+      href="./assets/img/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <!-- ESTILOS BOOTSTRAP -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <!-- JQUERY -->
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body>
+  <body>
     <header>
-        <img src="./assets/img/favicon.ico" alt="SuperHero Chile logo">
-        <h1>SuperHero Chile</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-        </nav>
+      <img src="./assets/img/favicon.ico" alt="SuperHero Chile logo" />
+      <h1>SuperHero Chile</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
     </header>
     <main>
-        <h1>Encuentra tu SuperHero</h1>
-        <form action="#" id="search-form">
-            <input type="search" id="search-box" placeholder="Ingresa el número del SuperHero a buscar" required>
-            <button type="submit">Buscar</button>
-        </form>
+      <h1>Encuentra tu SuperHero</h1>
+      <form action="#" id="search-form">
+        <input
+          type="search"
+          id="search-box"
+          placeholder="Ingresa el número del SuperHero a buscar"
+          required
+        />
+        <button type="submit">Buscar</button>
+      </form>
+      <div id="hero-details" class="card-container"></div>
+      <div id="chartContainer" style="height: 370px; width: 100%"></div>
     </main>
-</body>
 
+    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
